fix layout issues in main

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,7 +1,8 @@
 /* Space out content a bit */
 body {
     /*background-color: #F9FFF0;*/
-    background-color: #fffdec;
+    /*background-color: white;*/
+    background-image: url('wavegrid/wavegrid.png');
     padding-top: 20px;
     padding-bottom: 20px;
 }
@@ -88,7 +89,6 @@ body {
 
 .container {
     /*background-color: #F9FFF0;*/
-    background-color: #fffdec;
     height:100%;
     min-width: 200px;
     max-width: 2000px;
